# fastapi-sqlalchemy-boilerplate

./: LICENSE.md  README.md  pyproject.toml
alembic/versions/: 418d8ac83ed1_init.py
app/: __init__.py  constants.py  dependencies.py  errors.py  schemas.py  service.py  utils.py
app/auth/: dependencies.py  oauth.py  router.py  schemas.py  service.py  utils.py
app/auth/oauth_client/: __init__.py
app/models/: __init__.py
app/models/user/: user.py
app/permission/: router.py
app/sync/: __init__.py  email.py
app/user/: router.py
docs/: alembic.example.ini  boilerplate.service  nginx.conf  settings.example.toml
tests/: conftest.py  helpers.py  test_utils.py
tests/client_requests/: __init__.py  oauth.py  permission.py  user.py
tests/permission/: test_permission_example.py
tests/user/: test_profile.py
